tests/fail/test_unspecified_float_bits.nim
import ../../protobuf_serialization

type UnspecifiedFloatBits = object
  x {.fieldNumber: 1.}: float64

discard Protobuf.encode(UnspecifiedFloatBits())
